2003/10/08 00:33 (+0200) kaffeetisch

	* Makefile.PL: Install gnome2perl-vfs-gtypes.h.

2003/10/07 23:57 (+0200) kaffeetisch

	* genmaps.pl: Include xs/gnome2perl-vfs-gtypes.c when compiling
	the helper program.

	* gnome2perl.h: Declare GnomeVFSURI converters.

	* xs/GnomeVFSURI.xs: Add destruction handler.  Call
	gnome_vfs_uri_relative_new instead of
	gnome_vfs_uri_resolve_relative when we're older than 1.9.1.
	Cosmetical cleanups.

	A t/GnomeVFSOps
	A xs/GnomeVFSOps.xs
	* MANIFEST
	* gnome2perl.h
	* gnome2perl.typemap
	* t/GnomeVFSURI.t: Initial partial implementation of GnomeVFSOps.
	The test isn't included in make test because it creates and
	deletes files.

2003/10/07 10:34 (-0400) muppetman

	* xs/GnomeVFSURI.xs: gnome-vfs-uri.h apparently gets #included via
	the standard gnome headers in newer releases but not in older ones.
	include libgnomevfs/gnome-vfs-uri.h directly to compile on gnome 2.0.

2003/10/07 03:19 (+0200) kaffeetisch

	* Makefile.PL: Use xs/gnome2perl-vfs-gtypes.c as the place for the
	GTypes for GnomeVFS.

2003/10/07 02:32 (+0200) kaffeetisch

	* LICENSE
	* Gnome2.pm
	* README
	* xs/*: Update license terms.

	* MANIFEST
	* Makefile.PL
	* genmaps.pl
	* gnome2perl.h
	* maps
	R gnomeuiinfo.typemap
	A gnome2perl.typemap
	A t/GnomeVFSURI.t
	A xs/GnomeVFSInit.xs
	A xs/GnomeVFSURI.xs: Add first parts of GnomeVFS bindings and the
	necessary infrastructure.

2003/10/04 16:26 (+0200) kaffeetisch

	* Gnome2.pm: Alter documentation to better describe Gnome2.  Don't
	repeat what Gtk2.pm says, but rather point the reader to it.  Add
	links to the API documentation.  Add a MISSING METHODS section, a
	RENAMED METHODS section and a DIFFERENT CALL SIGNATURES OR
	SEMANTICS section.  (Following Gtk2.pm's example.)

2003/10/03 16:29 (-0400) muppetman

	* Gnome2.pm, META.yml, README, debian/changelog: release 0.38

2003/10/01 18:45 (+0200) kaffeetisch

	* xs/GnomeIconTheme.xs
	* xs/GnomeScores.xs: Move variable declarations to the beginning