@@ -1,3 +1,8 @@
+2003/10/09 02:42 (+0200) kaffeetisch
+
+	* genmaps.pl: Make warnings and strict safe.  Use descriptive
+	variable names.  Remove every reference to GnomeCanvas.
+
 2003/10/08 00:33 (+0200) kaffeetisch
 
 	* Makefile.PL: Install gnome2perl-vfs-gtypes.h.
